--- a/jsapi2021.html
+++ b/jsapi2021.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0048)https://andych008.github.io/jsapi/jsapi2021.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>jsapi测试</title>
-    <link rel="stylesheet" href="./jsapi测试_files/style.css">
+    <link rel="stylesheet" href="./jsapi_files/style.css">
     
 </head>
 
