--- a/jsapi2021.html
+++ b/jsapi2021.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h2>轻程序相关</h2>
+    <h2>轻程序相关(pink)</h2>
     <hr>
     <div class="line">
         <button id="umGetSystemInfo">获取平台信息<br>umGetSystemInfo</button>
