--- a/jsapi2021.html
+++ b/jsapi2021.html
@@ -96,11 +96,11 @@
     <hr>
     <div class="line">
         <button id="umVideoCall">视频通话<br>umVideoCall</button>
-		<button id="umActionSheet">展示ActionSheet<br>umAlertSheet</button>
-		<button id="umToast">展示弱提示弹窗<br>umAlertSheet</button>
-		<button id="umInput">展示输入弹窗<br>umAlertSheet</button>
-		<button id="umLoading">展示全局加载动画<br>umAlertSheet</button>
-		<button id="umAlert">展示图文弹窗<br>umAlertSheet</button>
+		<button id="umActionSheet">展示ActionSheet<br>umActionSheet</button>
+		<button id="umToast">展示弱提示弹窗<br>umToast</button>
+		<button id="umInput">展示输入弹窗<br>umInput</button>
+		<button id="umLoading">展示全局加载动画<br>umLoading</button>
+		<button id="umAlert">展示图文弹窗<br>umAlert</button>
 
     </div>
 
