--- a/jsapi2021.html
+++ b/jsapi2021.html
@@ -96,6 +96,11 @@
     <hr>
     <div class="line">
         <button id="umVideoCall">视频通话<br>umVideoCall</button>
+		<button id="umActionSheet">展示ActionSheet<br>umActionSheet</button>
+		<button id="umToast">展示弱提示弹窗<br>umToast</button>
+		<button id="umInput">展示输入弹窗<br>umInput</button>
+		<button id="umLoading">展示全局加载动画<br>umLoading</button>
+		<button id="umAlert">展示图文弹窗<br>umAlert</button>
 
     </div>
 
@@ -226,6 +231,17 @@
         bindClickAndExec("umStartQApp")
         bindClickAndExec("umGetQAppId")
         bindClickAndExec("umGetQAppVersion")
+		
+		//Actionheet
+		bindClickAndExec("umActionSheet");
+		//AlertDialog
+		bindClickAndExec("umAlert")
+		//Toast
+		bindClickAndExec("umToast")
+		//input
+		bindClickAndExec("umInput")
+		//Loading animation
+		bindClickAndExec("umLoading")
 
         bindClickAndExec("umQloudPost",api = null,param = {'path': '/qcloud/api/zh/test-udesk/test/getappid', 'query':'',
   'headers':{
